--- a/ports/esp32/main_esp32/idf_component.yml
+++ b/ports/esp32/main_esp32/idf_component.yml
@@ -1,5 +1,7 @@
 ## IDF Component Manager Manifest File
 dependencies:
   espressif/mdns: "~1.1.0"
+  espressif/nghttp: "~1.58.0"
+  espressif/sh2lib: "~1.0.5"
   idf:
     version: ">=5.0.4"
